[package]
name = "scene"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate
plugin-dependencies = [
    { name = "libnn_hid_hook.nro", url = "https://github.com/jugeeya/nn-hid-hook/releases/download/beta/libnn_hid_hook.nro" },
]

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/GradualSyrup/skyline-rs", branch = "report-user-test" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
rand = { git = "https://github.com/skyline-rs/rand" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
